--- a/src/Components/Login/Login.css
+++ b/src/Components/Login/Login.css
@@ -1,17 +1,125 @@
-*{
-  text-align: center;
+* {
   font-family: 'Poppins', sans-serif;
   box-sizing: border-box;
-  margin: 2;
+  margin: 0;
   padding: 0;
-
-  
 }
-body{
+
+body {
   background-color: #f0f2f5;
   display: flex;
-  justify-content: center;
+  flex-direction: column; /* Para empilhar título e formulário */
   align-items: center;
   height: 100vh;
+  background: url('/src/assets/backgorund.jpg') no-repeat center center fixed;
+
 }
 
+/* Título no topo */
+h1 {
+  font-size: 2.2rem;
+  font-weight: bold;
+  color: #fff;
+  text-shadow: 2px 2px 5px rgba(0,0,0,0.3);
+  margin-bottom: 30px;
+  text-align: center;
+}
+
+
+.container {
+  background: rgba(255, 255, 255, 0.15); /* branco translúcido */
+  backdrop-filter: blur(10px); /* efeito de vidro */
+  -webkit-backdrop-filter: blur(10px); /* suporte para Safari */
+  border-radius: 12px;
+  padding: 40px;
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+  width: 100%;
+  max-width: 500px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+}
+
+
+
+/* Inputs */
+.container input {
+  width: 100%;
+  padding: 10px 35px 10px 10px;
+  margin: 8px 0;
+  border-radius: 8px;
+  border: 1px solid #ccc;
+  outline: none;
+}
+
+.container input:focus {
+  border-color: #4a90e2;
+}
+
+/* Ícones */
+.icon {
+  position: relative;
+  top: -32px;
+  left: -25px;
+  color: #777;
+}
+
+/* Botão */
+button {
+  width: 100%;
+  padding: 10px;
+  background-color: #43A047;
+  color: white;
+  font-size: 1rem;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  margin-top: 10px;
+}
+
+button:hover {
+  background-color: #2E7D32;
+}
+
+/* Links */
+.recall-forget {
+  margin-top: 10px;
+  font-size: 0.9rem;
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+
+
+}
+
+.signup-link {
+  margin-top: 15px;
+  font-size: 0.9rem;
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+}
+
+.recall-forget label {
+  display: flex;
+  align-items: center;
+  gap: 5px; /* espaço entre o checkbox e o texto */
+  cursor: pointer;
+}
+
+.recall-forget input[type="checkbox"] {
+  width: 16px;
+  height: 16px;
+}
+
+.auth-extra {
+  display: flex;
+  flex-direction: column; /* Um embaixo do outro */
+  align-items: center;    /* Centraliza */
+  gap: 8px;               /* Espaço entre eles */
+  margin-top: 15px;
+}
+a{
+  color: #ffffff;
+  text-decoration: none;
+}
